     * added underpinnings of a unlockable, optional, bonus scenario
     * Battle_for_Wesnoth: allow Asheviere to recruit non-scout units
   * The South Guard
     * Proven by the Sword: tell Deoran to go to Westin if the citadel is
      secured (fixes #7360)
 * editor
   * allow maps to be loaded from scenario files and written back to them
 * graphics
   * fixed terrain selection probabilites (patch #617)
   * stoned units do not use a separate cache
   * no more "darkened" cache. we now overlay terrain/darken.png
   * star shaped "ellipses" for leaders and hero units
   * item graphic improvements including animate-able campfire.
   * terrain
     * added peaks to the impassable mountains
   * unit art
     * added a recruit animation for Skeleton
   * fix gryphon not being in the center of their hex
   * Fixed incorrect WML in some units causing female variations to use male
 * language and i18n:
   * new/updated man pages:
   * updated translations: British English, French, German, Italian, Russian, 
     Swedish
   * fixed huge list of spelling mistakes in the en_US version
   * allow sighted messages to be translated with correct plural form (bug #8161)
 * multiplayer
   * game management
     * replace "Downloading next level..." by "Receiving data..."
        when scenario don't have next_scenario
     * replace "Downloading next level..." by "Downloading next scenario..."
     * fixed controler change not sended to all client (bug #8138)
     * client now tells the server if a game ended in victory or defeat
     * configurable castle size for random map generator (patch #598, FR #3232)
     * team names translation now supported
   * scenarios
     * scenarios can set faction, recruit, leader, and some other initial
       settings previously ignored in multiplayer
   * maps:
     * new multiplayer maps: The Manzivan Traps
     * revised maps: Blitz
 * Python AI
   * Added various input validations
   * Set Python errors upon error