@@ -12,6 +12,7 @@ Version 1.3-svn:
  * editor
    * allow maps to be loaded from scenario files and written back to them
  * graphics
+   * improved layering system for terrain graphics
    * fixed terrain selection probabilites (patch #617)
    * stoned units do not use a separate cache
    * no more "darkened" cache. we now overlay terrain/darken.png
